infrastructure.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}

provider "aws" {
  region = "ap-northeast-2"
}

resource "aws_vpc" "ecr_vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "private_subnet_1" {
  vpc_id            = aws_vpc.ecr_vpc.id
  cidr_block        = "10.0.0.0/24"
  availability_zone = "ap-northeast-2a"
}

resource "aws_subnet" "private_subnet_2" {
  vpc_id            = aws_vpc.ecr_vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "ap-northeast-2b"
}

resource "aws_ecr_repository" "ecr-repository" {
  name = "ecr-repository"
}

resource "aws_ecs_cluster" "ecs-cluster" {
  name = "ecs-cluster"
}

resource "aws_iam_role" "execution_role" {
  name = "ecs-task-execution-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
EOF
}

resource "aws_ecs_task_definition" "ecr_task_definition" {
  family                   = "ecr-task-definition-family"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"

  execution_role_arn       = aws_iam_role.execution_role.arn

  container_definitions = <<DEFINITION
[
  {
    "name": "ecr-container",
    "image": "${aws_ecr_repository.ecr-repository.repository_url}:latest",
    "portMappings": [
      {
        "containerPort": 80,
        "hostPort": 80,
        "protocol": "tcp"
      }
    ],
    "cpu": 256,
    "memory": 512
  }
]
DEFINITION
}

resource "aws_lb" "ecr_alb" {
  name               = "ecr-alb"
  load_balancer_type = "application"
  subnets            = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
}

resource "aws_lb_listener" "alb_listener" {
  load_balancer_arn = aws_lb.ecr_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_lb_target_group.ecr_target_group.arn
    type             = "forward"
  }
}

resource "aws_lb_target_group" "ecr_target_group" {
  name     = "ecr-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.ecr_vpc.id
}

resource "aws_security_group" "ecr_security_group" {
  vpc_id      = aws_vpc.ecr_vpc.id
  name        = "ecr-security-group"
  description = "ECR Security Group"
}

resource "aws_ecs_service" "dealver" {
  name            = "dealver"
  cluster         = aws_ecs_cluster.ecs-cluster.id
  task_definition = aws_ecs_task_definition.ecr_task_definition.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = [aws_subnet.private_subnet_1.id]
    security_groups = [aws_security_group.ecr_security_group.id]
  }
}

resource "aws_internet_gateway" "vpc_igw" {
  vpc_id = aws_vpc.ecr_vpc.id
}
